--- a/main.css
+++ b/main.css
@@ -18,20 +18,26 @@
   opacity: 0.7;
   font-family: 'Bowlby One SC', cursive;
 }
+body,
 #app {
-  background-color: EEEBD0;
+  background-color: #eeebd0;
 }
 h3 {
   color: #3c6997;
   font-family: 'Bowlby One SC', cursive;
   text-decoration: underline;
 }
+input {
+  font-size: 1.5rem;
+}
 .list-group-item {
-  background-color: EEEBD0;
+  background-color: #eeebd0;
+  border-color: #003049;
   font-size: 1.3rem;
 }
 strong,
 .list-group-item:hover {
+  border-color: #d34e24;
   color: #d34e24;
   cursor: pointer;
 }
